// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncentiveCalculator includes an aggregate row with multiple products 1`] = `
<Fragment>
  <Jumbotron
    fluid={false}
  >
    <h2
      className="jsx-3309016289"
    >
      Incentive by Product:
    </h2>
    <p
      className="jsx-3309016289"
    >
      This formula gives the partial incentive for each product reported in the CIIP application.
      <br
        className="jsx-3309016289"
      />
      The total Incentive is the sum of these partial incentives.
    </p>
    <img
      alt="CIIP Incentive Formula"
      className="jsx-3309016289"
      src="/static/ciip-formula.svg"
    />
  </Jumbotron>
  <ForwardRef
    bordered={true}
    hover={true}
    responsive="lg"
    striped={true}
  >
    <thead
      className="jsx-3309016289"
    >
      <tr
        className="jsx-3309016289"
      >
        <th
          className="jsx-3309016289"
        >
          Product Name
        </th>
        <th
          className="jsx-3309016289"
        >
          Emission Intensity
        </th>
        <th
          className="jsx-3309016289"
        >
          Benchmark
        </th>
        <th
          className="jsx-3309016289"
        >
          Eligibility Threshold
        </th>
        <th
          className="jsx-3309016289"
        >
          Incentive Multiplier
        </th>
        <th
          className="jsx-3309016289"
        >
          Payment Allocation
        </th>
        <th
          className="jsx-3309016289"
        >
          Incentive Ratio
        </th>
        <th
          className="jsx-3309016289"
        >
          Calculated Incentive (CAD)
        </th>
        <th
          className="jsx-3309016289"
        >
          Maximum Incentive (CAD)
        </th>
      </tr>
    </thead>
    <tbody
      className="jsx-3309016289"
    >
      <Relay(IncentiveSegmentContainer)
        ciipIncentiveByProduct={
          Object {
            " $fragmentRefs": Object {
              "IncentiveSegmentContainer_ciipIncentiveByProduct": true,
            },
            "incentiveProduct": "0",
            "incentiveProductMax": "0",
            "rowId": 1,
          }
        }
        key="1"
      />
      <Relay(IncentiveSegmentContainer)
        ciipIncentiveByProduct={
          Object {
            " $fragmentRefs": Object {
              "IncentiveSegmentContainer_ciipIncentiveByProduct": true,
            },
            "incentiveProduct": "13.722",
            "incentiveProductMax": "15.354",
            "rowId": 2,
          }
        }
        key="2"
      />
      <tr
        className="jsx-3309016289"
      >
        <td
          className="jsx-3309016289"
        />
         
        <td
          className="jsx-3309016289"
        />
         
        <td
          className="jsx-3309016289"
        />
         
        <td
          className="jsx-3309016289"
        />
         
        <td
          className="jsx-3309016289"
        />
         
        <td
          className="jsx-3309016289"
        />
        <td
          className="jsx-3309016289 text-right"
        >
          0.8937
        </td>
        <td
          className="jsx-3309016289 text-right"
        >
          <Money
            amount="13.72"
          />
        </td>
        <td
          className="jsx-3309016289 text-right"
        >
          <Money
            amount="15.35"
          />
        </td>
      </tr>
    </tbody>
  </ForwardRef>
  <JSXStyle
    id="3309016289"
  >
    h2.jsx-3309016289{font-size:1.25rem;margin-botton:0.5rem;}img.jsx-3309016289{width:100%;max-width:500px;}
  </JSXStyle>
</Fragment>
`;

exports[`IncentiveCalculator should render the page 1`] = `
<Fragment>
  <Jumbotron
    fluid={false}
  >
    <h2
      className="jsx-3309016289"
    >
      Incentive by Product:
    </h2>
    <p
      className="jsx-3309016289"
    >
      This formula gives the partial incentive for each product reported in the CIIP application.
      <br
        className="jsx-3309016289"
      />
      The total Incentive is the sum of these partial incentives.
    </p>
    <img
      alt="CIIP Incentive Formula"
      className="jsx-3309016289"
      src="/static/ciip-formula.svg"
    />
  </Jumbotron>
  <ForwardRef
    bordered={true}
    hover={true}
    responsive="lg"
    striped={true}
  >
    <thead
      className="jsx-3309016289"
    >
      <tr
        className="jsx-3309016289"
      >
        <th
          className="jsx-3309016289"
        >
          Product Name
        </th>
        <th
          className="jsx-3309016289"
        >
          Emission Intensity
        </th>
        <th
          className="jsx-3309016289"
        >
          Benchmark
        </th>
        <th
          className="jsx-3309016289"
        >
          Eligibility Threshold
        </th>
        <th
          className="jsx-3309016289"
        >
          Incentive Multiplier
        </th>
        <th
          className="jsx-3309016289"
        >
          Payment Allocation
        </th>
        <th
          className="jsx-3309016289"
        >
          Incentive Ratio
        </th>
        <th
          className="jsx-3309016289"
        >
          Calculated Incentive (CAD)
        </th>
        <th
          className="jsx-3309016289"
        >
          Maximum Incentive (CAD)
        </th>
      </tr>
    </thead>
    <tbody
      className="jsx-3309016289"
    >
      <Relay(IncentiveSegmentContainer)
        ciipIncentiveByProduct={
          Object {
            " $fragmentRefs": Object {
              "IncentiveSegmentContainer_ciipIncentiveByProduct": true,
            },
            "incentiveProduct": "0",
            "incentiveProductMax": "0",
            "rowId": 1,
          }
        }
        key="1"
      />
    </tbody>
  </ForwardRef>
  <JSXStyle
    id="3309016289"
  >
    h2.jsx-3309016289{font-size:1.25rem;margin-botton:0.5rem;}img.jsx-3309016289{width:100%;max-width:500px;}
  </JSXStyle>
</Fragment>
`;
